--- a/app/templates/staff/staff_stable_report.html
+++ b/app/templates/staff/staff_stable_report.html
@@ -117,7 +117,7 @@
           </div>
           <div class="row justify-content-center">
             <div class="col-md-10 col-xl-8">
-              <h5 class="text-center text-black">Причины отсутствия</h5>
+              <h5 class="text-center text-black">Причины отсутствия:</h5>
             </div>
           </div>
           <div class="row justify-content-center">
