Staff App: update staff_stable_info to view current date military data

--- a/app/templates/staff/staff_stable_info.html
+++ b/app/templates/staff/staff_stable_info.html
@@ -35,6 +35,9 @@
                       </div>
                       <div class="text-center px-3">
                         <h4 class="fw-bold text-center text-dark mb-0">{{ staff_stable_data.get("staff_total") }}</h4>
+                        {% if military_data %}
+                          <h4 class="fw-bold text-center text-primary mb-0">({{ military_data.get("staff_military_total") }} атт)</h4>
+                        {% endif %}
                         <p class="text-center text-dark mb-0">По списку</p>
                       </div>
                     </div>
@@ -49,6 +52,9 @@
                       </div>
                       <div class="text-center px-3">
                         <h4 class="fw-bold text-center text-dark mb-0">{{ staff_stable_data.get("staff_stock") }}</h4>
+                        {% if military_data %}
+                          <h4 class="fw-bold text-center text-primary mb-0">({{ military_data.get("staff_military_stock") }} атт)</h4>
+                        {% endif %}
                         <p class="text-center text-dark mb-0">В строю</p>
                       </div>
                     </div>
@@ -63,6 +69,9 @@
                       </div>
                       <div class="px-3">
                         <h4 class="fw-bold text-dark mb-0">{{ staff_stable_data.get("staff_absence") }}</h4>
+                        {% if military_data %}
+                          <h4 class="fw-bold text-center text-primary mb-0">({{ military_data.get("staff_military_absence") }} атт)</h4>
+                        {% endif %}
                         <p class="text-dark mb-0">Отсутствуют</p>
                       </div>
                     </div>
