Staff App: added functionality for various staff report

--- a/app/templates/staff/staff_stable_load.html
+++ b/app/templates/staff/staff_stable_load.html
@@ -17,7 +17,7 @@
               {% for dept_type in staff_data %}
                 <thead>
                   <tr>
-                    <th class="text-center mb-1 text-uppercase" colspan="5">{{ dept_type }}</th>
+                    <th class="text-center mb-1 text-uppercase" colspan="5" style="background: var(--bs-table-border-color);">{{ dept_type }}</th>
                   </tr>
                 </thead>
                 <thead>
