--- a/app/templates/staff/staff_various_load.html
+++ b/app/templates/staff/staff_various_load.html
@@ -7,89 +7,104 @@
       <h4 class="fw-bold text-center text-dark mb-1">{{ date.strftime("%d.%m.%Y") }}</h4>
       <h4 class="fw-normal text-center text-dark mb-1">Статус - {{ config.STAFF_COLLECTION_STATUSES[doc_status]|lower }}</h4>
   </div>
+  <div class="container">
+    <div class="row justify-content-center">
+        <div class="col" style="text-align: center;">
+            <div class="btn-group" role="group" style="text-align: center;">
+              <a class="btn {% if daytime == "morning" %}btn-primary{% else %}btn-secondary{% endif %}"
+                 role="button" href="{{ url_for("staff.staff_various_load", daytime="morning") }}">Утро (8:30)</a>
+              <a class="btn {% if daytime == "day" %}btn-primary{% else %}btn-secondary{% endif %}"
+                 role="button" href="{{ url_for("staff.staff_various_load", daytime="day") }}">День (14:30)</a>
+              <a class="btn {% if daytime == "evening" %}btn-primary{% else %}btn-secondary{% endif %}"
+                 role="button" href="{{ url_for("staff.staff_various_load", daytime="evening") }}">Вечер (21:30)</a>
+            </div>
+        </div>
+    </div>
+</div>
   <form method="post">
     {{ form.hidden_tag() }}
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-md-10 col-xl-8">
           <div class="table-responsive">
-            <table class="table table-sm mt-3">
-              {% if groups_data %}
-                <thead>
-                  <tr>
-                    <th class="table-dark text-center mb-1 text-uppercase" colspan="5">Факультеты</th>
-                  </tr>
-                </thead>
-                {% for dept_data in groups_data.values() %}
-                  <thead>
-                    <tr>
-                      <th class="table-primary text-center mb-1 text-uppercase" colspan="5">{{ dept_data.get('name') }}</th>
-                    </tr>
-                  </thead>
-                  <thead>
-                    <tr>
-                      <th class="text-center">Название</th>
-                      <th class="text-center">По списку</th>
-                      <th class="text-center">В строю</th>
-                      <th class="text-center">Отсутствуют</th>
-                      <th class="text-center">Действия</th>
-                    </tr>
-                  </thead>
-                  {% for course_number, course_data in dept_data['items'].items() %}
-                    {% if dept_data['items']|length > 1 %}
-                      <thead>
-                        <tr>
-                          <th class="text-center mb-1 text-uppercase" colspan="5">{{ course_data.get('name') }}</th>
-                        </tr>
-                      </thead>
-                    {% endif %}
-                    <tbody>
-                    {% for group_id, group_data in course_data['items'].items() %}
-                      {% if group_data.get("student_count") %}
-                        <tr>
-                          <td class="text-center">{{ group_data.get("name") }}</td>
-                          <td class="text-center">{{ group_data.get("student_count") if group_data.get("student_count") is not none else "нет данных"}}</td>
-                          <td class="text-center">{{ group_data.get("student_stock") if group_data.get("student_stock") is not none else "нет данных" }}</td>
-                          <td class="text-center">{{ group_data.get("student_absence") if group_data.get("student_absence") is not none else "нет данных" }}</td>
-                          <td class="text-center">
-                            {% if doc_status == config.STAFF_IN_PROGRESS_STATUS %}
-                              {% if group_data.get("student_absence") is none %}
-                                <a class="btn btn-primary btn-sm" role="button"
-                                   href="{{ url_for("staff.staff_various_edit", group_id=group_id, course=course_number, date=date) }}">Добавить</a>
-                              {% else %}
-                                <a class="btn btn-warning btn-sm" role="button"
-                                   href="{{ url_for("staff.staff_various_edit", group_id=group_id, course=course_number, date=date) }}">Изменить</a>
-                              {% endif %}
-                            {% else %}
-                              {% if group_data.get("student_absence") is none %}
-                                <div class="fw-bold text text-danger">нет данных<div>
-                              {% else %}
-                                <a class="btn btn-success btn-sm" role="button"
-                                   href="{{ url_for("staff.staff_various_edit", group_id=group_id, course=course_number, date=date) }}">Просмотр</a>
-                              {% endif %}
-                            {% endif %}
-                          </td>
-                        </tr>
-                      {% endif %}
-                    {% endfor %}
-                  {% endfor %}
-                  </tbody>
-                {% endfor %}
-              {% endif %}
-            </table>
+            {{ groups_data }}
+{#            <table class="table table-sm mt-3">#}
+{#              {% if groups_data %}#}
+{#                <thead>#}
+{#                  <tr>#}
+{#                    <th class="table-dark text-center mb-1 text-uppercase" colspan="5">Факультеты</th>#}
+{#                  </tr>#}
+{#                </thead>#}
+{#                {% for dept_data in groups_data.values() %}#}
+{#                  <thead>#}
+{#                    <tr>#}
+{#                      <th class="table-primary text-center mb-1 text-uppercase" colspan="5">{{ dept_data.get('name') }}</th>#}
+{#                    </tr>#}
+{#                  </thead>#}
+{#                  <thead>#}
+{#                    <tr>#}
+{#                      <th class="text-center">Название</th>#}
+{#                      <th class="text-center">По списку</th>#}
+{#                      <th class="text-center">В строю</th>#}
+{#                      <th class="text-center">Отсутствуют</th>#}
+{#                      <th class="text-center">Действия</th>#}
+{#                    </tr>#}
+{#                  </thead>#}
+{#                  {% for course_number, course_data in dept_data['items'].items() %}#}
+{#                    {% if dept_data['items']|length > 1 %}#}
+{#                      <thead>#}
+{#                        <tr>#}
+{#                          <th class="text-center mb-1 text-uppercase" colspan="5">{{ course_data.get('name') }}</th>#}
+{#                        </tr>#}
+{#                      </thead>#}
+{#                    {% endif %}#}
+{#                    <tbody>#}
+{#                    {% for group_id, group_data in course_data['items'].items() %}#}
+{#                      {% if group_data.get("student_count") %}#}
+{#                        <tr>#}
+{#                          <td class="text-center">{{ group_data.get("name") }}</td>#}
+{#                          <td class="text-center">{{ group_data.get("student_count") if group_data.get("student_count") is not none else "нет данных"}}</td>#}
+{#                          <td class="text-center">{{ group_data.get("student_stock") if group_data.get("student_stock") is not none else "нет данных" }}</td>#}
+{#                          <td class="text-center">{{ group_data.get("student_absence") if group_data.get("student_absence") is not none else "нет данных" }}</td>#}
+{#                          <td class="text-center">#}
+{#                            {% if doc_status == config.STAFF_IN_PROGRESS_STATUS %}#}
+{#                              {% if group_data.get("student_absence") is none %}#}
+{#                                <a class="btn btn-primary btn-sm" role="button"#}
+{#                                   href="{{ url_for("staff.staff_various_edit", group_id=group_id, course=course_number, date=date) }}">Добавить</a>#}
+{#                              {% else %}#}
+{#                                <a class="btn btn-warning btn-sm" role="button"#}
+{#                                   href="{{ url_for("staff.staff_various_edit", group_id=group_id, course=course_number, date=date) }}">Изменить</a>#}
+{#                              {% endif %}#}
+{#                            {% else %}#}
+{#                              {% if group_data.get("student_absence") is none %}#}
+{#                                <div class="fw-bold text text-danger">нет данных<div>#}
+{#                              {% else %}#}
+{#                                <a class="btn btn-success btn-sm" role="button"#}
+{#                                   href="{{ url_for("staff.staff_various_edit", group_id=group_id, course=course_number, date=date) }}">Просмотр</a>#}
+{#                              {% endif %}#}
+{#                            {% endif %}#}
+{#                          </td>#}
+{#                        </tr>#}
+{#                      {% endif %}#}
+{#                    {% endfor %}#}
+{#                  {% endfor %}#}
+{#                  </tbody>#}
+{#                {% endfor %}#}
+{#              {% endif %}#}
+{#            </table>#}
           </div>
         </div>
       </div>
       <div class="row justify-content-center">
         <div class="col-md-10 col-xl-8 mt-3 mb-3">
           <div class="btn-group" role="group">
-          {% if has_permission(config.STAFF_CLOSE_DOCUMENT_PERMISSION) %}
-            {% if doc_status == config.STAFF_IN_PROGRESS_STATUS %}
-              {{ form.finish_edit(class="btn btn-danger fw-bold") }}
-            {% elif doc_status == config.STAFF_COMPLETED_STATUS %}
-              {{ form.enable_edit(class="btn btn-warning fw-bold") }}
-            {% endif %}
-          {% endif %}
+{#          {% if has_permission(config.STAFF_CLOSE_DOCUMENT_PERMISSION) %}#}
+{#            {% if doc_status == config.STAFF_IN_PROGRESS_STATUS %}#}
+{#              {{ form.finish_edit(class="btn btn-danger fw-bold") }}#}
+{#            {% elif doc_status == config.STAFF_COMPLETED_STATUS %}#}
+{#              {{ form.enable_edit(class="btn btn-warning fw-bold") }}#}
+{#            {% endif %}#}
+{#          {% endif %}#}
             {{ form.make_report(class="btn btn-success fw-bold") }}
           </div>
         </div>
