Staff App: various staff report added

--- a/app/templates/staff/staff_allowed_faculty.html
+++ b/app/templates/staff/staff_allowed_faculty.html
@@ -15,6 +15,7 @@
         <td>{{ obj.id }}</td>
         <td class="text-start">{{ obj.apeks_id }}</td>
         <td class="text-start">{{ obj.name }}</td>
+        <td class="text-start">{{ obj.short_name }}</td>
         <td class="text-start">{{ obj.sort }}</td>
         <td>
           <div class="btn-group" role="group">
